@@ -4,8 +4,8 @@ import com.github.kegszool.bot.menu.BaseMenu;
 
 import org.springframework.stereotype.Component;
 import org.springframework.beans.factory.annotation.Value;
-import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 
+import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -35,12 +35,7 @@ public class MainMenu extends BaseMenu {
 
     @Override
     protected List<String> getFullWidthSections() {
-        return List.of();
-    }
-
-    @Override
-    public InlineKeyboardMarkup getKeyboard() {
-        return menuKeyboard;
+        return Collections.emptyList();
     }
 
     @Override
